--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="css/all.min.css" />
     <link rel="stylesheet" href="css/fontawesome.min.css" />
+    <!-- <link rel="stylesheet" href="mobile.css"> -->
   </head>
   <body>
     <header>
@@ -112,7 +113,7 @@
           <div class="booking">
             <div class="list">
               <div id="list" class="list_1">
-                <h4><img src="/images/asset 1.webp" alt="" />Trondheim</h4>
+                <h4><img src="/images/asset 1.png" alt=""> Trondheim</h4>
                 <p><a href="#">from</a></p>
               </div>
               <div id="list" class="list_2">
@@ -120,30 +121,30 @@
                 <p><a href="#">from</a></p>
               </div>
               <div id="list" class="list_3">
-                <h4><img src="/images/asset 3.webp" alt="" /> Bransgore</h4>
+                <h4><img src="/images/asset 3.png" alt=""> Bransgore</h4>
                 <p><a href="#">from</a></p>
               </div>
               <div id="list" class="list_4">
-                <h4><img src="/images/asset 4.webp" alt="" /> Cala Anguila</h4>
+                <h4><img src="/images/asset 4.png" alt=""> Cala Anguila</h4>
                 <p><a href="#">from</a></p>
               </div>
               <div id="list" class="list_5">
-                <h4><img src="/images/asset 5.webp" alt="" /> Chiusanico</h4>
+                <h4><img src="/images/asset 5.png" alt=""> Chiusanico</h4>
                 <p><a href="#">from</a></p>
               </div>
               <div id="list" class="list_6">
-                <h4><img src="/images/asset 6.webp" alt="" /> Kavousion</h4>
+                <h4><img src="/images/asset 6.png" alt=""> Kavousion</h4>
                 <p><a href="#">from</a></p>
               </div>
               <div id="list" class="list_7">
                 <h4>
-                  <img src="/images/asset 5.webp" alt="" /> Pieve Di Ledro
+                 <img src="/images/asset 5.png" alt=""> Pieve Di Ledro
                 </h4>
                 <p><a href="#">from</a></p>
               </div>
               <div id="list" class="list_8">
                 <h4>
-                  <img src="/images/asset 2.webp" alt="" /> Vierville-sur-Mer
+                  <img src="/images/asset 2.png" alt=""> Vierville-sur-Mer
                 </h4>
                 <p><a href="#">from</a></p>
               </div>
@@ -155,7 +156,7 @@
         </div>
         <div class="line">
           <p>
-            _______________________________________________________________________________________________________________________
+            ___________________________________________
           </p>
         </div>
       </div>
@@ -364,7 +365,7 @@
         </div>
         <div class="line">
           <p>
-            _______________________________________________________________________________________________________________________
+            ____________________________
           </p>
         </div>
       </div>
